add different functions for g

--- a/fourier_transform_symmetric_group.ipynb
+++ b/fourier_transform_symmetric_group.ipynb
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "2cba26cc",
+   "execution_count": 166,
+   "id": "38bb05bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,27 +41,28 @@
     "#f(sigma)=g(sigma*x_0)=g(x_0)=constant\n",
     "x_0=vector([1,2,3])\n",
     "def g(x):\n",
-    "    return sum(x_i for x_i in x)\n",
+    "    #return sum(x_i for x_i in x)\n",
+    "    return x[0]\n",
     "def f(sigma):\n",
     "    return g(Permutation(sigma).to_matrix()*x_0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "9f031dae",
+   "execution_count": 167,
+   "id": "f8c2b177",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{[3]: [36],\n",
-       " [2, 1]: [0 0]\n",
-       " [0 0],\n",
+       "{[3]: [12],\n",
+       " [2, 1]: [-4  2]\n",
+       " [-2  1],\n",
        " [1, 1, 1]: [0]}"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "ce36d7d8",
+   "execution_count": 168,
+   "id": "75bcdc5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,32 +93,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "ca52a0ec",
+   "execution_count": 171,
+   "id": "ca66d667",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "True"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fourier_inv(Permutation([3,1,2]),fourier_coeffs)"
+    "fourier_inv(Permutation([3,1,2]),fourier_coeffs)==f(Permutation([3,1,2]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2985b679",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
