--- a/fourier_transform_symmetric_group.ipynb
+++ b/fourier_transform_symmetric_group.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 48,
    "id": "df28fcb5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 49,
    "id": "3b839251",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 69,
    "id": "38bb05bc",
    "metadata": {},
    "outputs": [],
@@ -42,27 +42,53 @@
     "x_0=vector([1,2,3])\n",
     "def g(x):\n",
     "    #return sum(x_i for x_i in x)\n",
-    "    return x[0]\n",
+    "    return x[0]-x[1]+x[2]\n",
+    "#note that C^3 is the sum of the standard rep'n and the trivial rep'n\n",
+    "#so that sigma*x = sigma*(x_triv+x_std), i.e. the sign rep'n component of x is zero\n",
+    "#so the f cannot depend on it\n",
     "def f(sigma):\n",
-    "    return g(Permutation(sigma).to_matrix()*x_0)"
+    "    #return g(Permutation(sigma).to_matrix()*x_0)\n",
+    "    #return Permutation(sigma).sign()\n",
+    "    return min(len(c) for c in Permutation(sigma).to_cycles())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 72,
+   "id": "6b72153a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 3, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[f(sigma) for sigma in G]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "id": "f8c2b177",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{[3]: [12],\n",
-       " [2, 1]: [-4  2]\n",
-       " [-2  1],\n",
-       " [1, 1, 1]: [0]}"
+       "{[3]: [10],\n",
+       " [2, 1]: [-2  0]\n",
+       " [ 0 -2],\n",
+       " [1, 1, 1]: [4]}"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "id": "75bcdc5a",
    "metadata": {},
    "outputs": [],
@@ -93,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 11,
    "id": "ca66d667",
    "metadata": {},
    "outputs": [
@@ -103,7 +129,7 @@
        "True"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,6 +137,24 @@
    "source": [
     "fourier_inv(Permutation([3,1,2]),fourier_coeffs)==f(Permutation([3,1,2]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "197c1dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#the representation ring of S_3 is isomorphic to Z[X,Y]/(XY − Y,X2 − 1,Y2 − X − Y − 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faa66c80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
