trying to find a basis where I can compute inner products

--- a/modular_repn_theory_symmetric_group.ipynb
+++ b/modular_repn_theory_symmetric_group.ipynb
@@ -2,8 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5e6cbfb8",
+   "execution_count": null,
+   "id": "fe9d2959",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: compute dim D^{\\lambda}\n",
+    "#for a p-regular partition \\lambda\n",
+    "#find basis elements e_i for Specht modules\n",
+    "#write basis in terms of Young tableaux\n",
+    "#compute rank of Gram matrix (<e_i,e_j>)_{i,j=1,...,n}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "3039ffee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O O . O \n",
+      ". O O . \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#diagrams: https://doc.sagemath.org/html/en/reference/combinat/sage/combinat/diagram.html\n",
+    "#note that Specht modules can be defined for general diagrams\n",
+    "from sage.combinat.diagram import Diagram\n",
+    "D = Diagram([(0,0), (0,1), (0,3), (1,1), (1,2)])\n",
+    "SGA = SymmetricGroupAlgebra(QQ, 5)\n",
+    "SM = SGA.specht_module(D)\n",
+    "D.pp()\n",
+    "SM.dimension()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ddf63616",
    "metadata": {},
    "outputs": [
     {
@@ -12,107 +62,185 @@
        "24"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Specht modules can be created from partitions\n",
     "SP = [la.specht_module(QQ) for la in Partitions(4)]\n",
     "sum(S.dimension()^2 for S in SP)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ddf63616",
+   "execution_count": 215,
+   "id": "32971f13",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "Symmetric group algebra of order 4 over Rational Field"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "D = [(0,0), (0,1), (1,1), (1,2), (0,3)]\n",
-    "SGA = SymmetricGroupAlgebra(QQ, 5)\n",
-    "SM = SGA.specht_module(D)\n",
-    "SM.dimension()"
+    "SP[1].ambient()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ae34f8f3",
+   "execution_count": 216,
+   "id": "fdae0ca4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Specht module of [(0, 0), (0, 1), (0, 3), (1, 1), (1, 2)] over Rational Field"
+       "[B[0], B[1], B[2]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SM"
+    "[b for b in SP[1].basis()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7207b970",
+   "execution_count": 209,
+   "id": "5086efea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[(0, 1)],\n",
-       " [(1, 1)],\n",
-       " [(2, 1)],\n",
-       " [(3, 1)],\n",
-       " [(4, 1)],\n",
-       " [(5, 1)],\n",
-       " [(6, 1)],\n",
-       " [(7, 1)],\n",
-       " [(8, 1)]]"
+       "[1, 2, 3, 4] + [1, 3, 2, 4] + [2, 1, 3, 4] + [2, 3, 1, 4] + [3, 1, 2, 4] + [3, 2, 1, 4] - [4, 1, 2, 3] - [4, 1, 3, 2] - [4, 2, 1, 3] - [4, 2, 3, 1] - [4, 3, 1, 2] - [4, 3, 2, 1]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[list(b) for b in SM.basis()]"
+    "SP[1].lift(SP[1].basis()[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "042037df",
+   "execution_count": 156,
+   "id": "e0afe1e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3*B[0] + B[1] + 2*B[2]"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: compute dim D^{\\lambda}\n",
-    "#for a p-regular partition \\lambda\n",
-    "#find basis elements e_i for Specht modules\n",
-    "#compute rank of Gram matrix (<e_i,e_j>)_{i,j=1,...,n}"
+    "#one can multiply elements of the group algebra kS_4 by elements of the specht module corresponding to two elements\n",
+    "SymmetricGroupAlgebra(QQ, 4).an_element() * SP[1].basis()[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "cb281ba1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'sage.combinat.specht_module.SpechtModule_with_category.element_class'>"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(SP[1].basis()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "7c107082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**\n",
+      "*\n",
+      "[(0, 0), (0, 1), (1, 0)]\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Free module generated by {0, 1} over Rational Field"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sage.combinat.diagram import NorthwestDiagrams\n",
+    "from sage.combinat.specht_module import specht_module_spanning_set\n",
+    "mu=Partitions(3)[1]; mu.pp()\n",
+    "d_mu=NorthwestDiagrams().from_partition(mu); print(d_mu)\n",
+    "dim_mu=SymmetricGroupAlgebra(QQ,3).specht_module(d_mu).dimension(); print(dim_mu)\n",
+    "span_set=specht_module_spanning_set(d_mu); span_set\n",
+    "SymmetricGroupAlgebra(QQ,3).submodule(span_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "40f5ff3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3] + [2, 1, 3] - [3, 1, 2] - [3, 2, 1]"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SymmetricGroupAlgebra(QQ,3).submodule(span_set).basis()[0].lift()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0afe1e9",
+   "id": "076679e6",
    "metadata": {},
    "outputs": [],
    "source": []
