--- a/modular_repn_theory_symmetric_group.ipynb
+++ b/modular_repn_theory_symmetric_group.ipynb
@@ -7,16 +7,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: compute dim D^{\\lambda}\n",
+    "#TODO: \n",
+    "#compute dim D^{\\lambda}\n",
+    "#define action of S_n on Young tableaux - DONE\n",
     "#for a p-regular partition \\lambda\n",
-    "#find basis elements e_i for Specht modules\n",
-    "#write basis in terms of Young tableaux\n",
-    "#compute rank of Gram matrix (<e_i,e_j>)_{i,j=1,...,n}"
+    "#find basis elements e_i for Specht modules S^\\lambda\n",
+    "#write basis e_T in terms of Young tableaux as in Chan's notes\n",
+    "#compute rank of Gram matrix (<e_i,e_j>)_{i,j=1,...,n} as in Chan's notes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
+   "id": "88ea5c42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#REFS:\n",
+    "#Chan's notes - https://math.mit.edu/~charchan/ModularRepresentationsSymmetricGroupSeminar.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "3039ffee",
    "metadata": {},
    "outputs": [
@@ -34,17 +47,17 @@
        "9"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#diagrams: https://doc.sagemath.org/html/en/reference/combinat/sage/combinat/diagram.html\n",
+    "#https://doc.sagemath.org/html/en/reference/combinat/sage/combinat/diagram.html\n",
     "#note that Specht modules can be defined for general diagrams\n",
     "from sage.combinat.diagram import Diagram\n",
     "D = Diagram([(0,0), (0,1), (0,3), (1,1), (1,2)])\n",
-    "SGA = SymmetricGroupAlgebra(QQ, 5)\n",
+    "SGA = SymmetricGroup(5).algebra(QQ)\n",
     "SM = SGA.specht_module(D)\n",
     "D.pp()\n",
     "SM.dimension()"
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "id": "ddf63616",
    "metadata": {},
    "outputs": [
@@ -62,7 +75,7 @@
        "24"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 81,
    "id": "32971f13",
    "metadata": {},
    "outputs": [
@@ -85,18 +98,19 @@
        "Symmetric group algebra of order 4 over Rational Field"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#the ambient vector space is k[S_n], as expected\n",
     "SP[1].ambient()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 37,
    "id": "fdae0ca4",
    "metadata": {},
    "outputs": [
@@ -106,18 +120,19 @@
        "[B[0], B[1], B[2]]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#basis elements are labeled but not explicitly given\n",
     "[b for b in SP[1].basis()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 83,
    "id": "5086efea",
    "metadata": {},
    "outputs": [
@@ -127,18 +142,19 @@
        "[1, 2, 3, 4] + [1, 3, 2, 4] + [2, 1, 3, 4] + [2, 3, 1, 4] + [3, 1, 2, 4] + [3, 2, 1, 4] - [4, 1, 2, 3] - [4, 1, 3, 2] - [4, 2, 1, 3] - [4, 2, 3, 1] - [4, 3, 1, 2] - [4, 3, 2, 1]"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#lift the basis elements to the ambient space to see what they are as elements of k[S_n]\n",
     "SP[1].lift(SP[1].basis()[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 85,
    "id": "e0afe1e9",
    "metadata": {},
    "outputs": [
@@ -148,19 +164,20 @@
        "3*B[0] + B[1] + 2*B[2]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#one can multiply elements of the group algebra kS_4 by elements of the specht module corresponding to two elements\n",
+    "#https://doc.sagemath.org/html/en/reference/combinat/sage/combinat/symmetric_group_algebra.html\n",
+    "#example of the action of SGA on the Specht module\n",
     "SymmetricGroupAlgebra(QQ, 4).an_element() * SP[1].basis()[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 40,
    "id": "cb281ba1",
    "metadata": {},
    "outputs": [
@@ -170,12 +187,13 @@
        "<class 'sage.combinat.specht_module.SpechtModule_with_category.element_class'>"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#the Specht module is a submodule_with_basis\n",
     "type(SP[1].basis()[0])"
    ]
   },
@@ -239,11 +257,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "076679e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#define action of S_n on Young tableaux T\n",
+    "def act(sigma,T):\n",
+    "    return Tableau([[sigma(l[i]) for i in range(len(l))] for l in t])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "d82f51d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 3, 4], [5, 2]]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#TODO: extend action to SGA by linearity\n",
+    "e = SGA.an_element()\n",
+    "g=list(e)[0][0]; g\n",
+    "T = Tableau([[1,2,3],[4,5]]); T\n",
+    "act(g,T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "bdc6b081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: determine when two tableaux are row-equivalent\n",
+    "def row_equiv(T_0,T_1):\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "611d03f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: compute the column stabilizer of a tableau T\n",
+    "def col_stab(T):\n",
+    "    return None"
+   ]
   }
  ],
  "metadata": {
