add blurb about Iawhori-Hecke algebras and Kahzdan-Lusztig polynomials

--- a/modular_repn_theory_symmetric_group.ipynb
+++ b/modular_repn_theory_symmetric_group.ipynb
@@ -257,6 +257,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "09643a4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://en.wikipedia.org/wiki/Iwahori–Hecke_algebra\n",
+    "#exists more general construction using Hecke algebras associated to Coxeter groups, i.e. Iwahori-Hecke algebras\n",
+    "#when q=1, we get the symmetric group algebra\n",
+    "#there are *two* bases, the canonical one and another discovered by Kazhdan-Lusztig\n",
+    "#one of these bases is equivalent to the basis described in Chan's notes\n",
+    "#the Kazhdan-Lusztig polynomials essentially give the transition matrix from one to the other\n",
+    "#computing the size of this basis over F_p gives the dimension of D^\\lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "id": "076679e6",
    "metadata": {},
