--- a/modular_repn_theory_symmetric_group.ipynb
+++ b/modular_repn_theory_symmetric_group.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 111,
    "id": "d82f51d2",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "[[1, 3, 4], [5, 2]]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "32d03ed9",
+   "id": "a18c8182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,15 +362,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
+   "id": "e352b7a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get columns of tableau\n",
+    "#there is a MUCH smarter way to do this\n",
+    "def cols(T):\n",
+    "    cols=[]\n",
+    "    for j in range(max(T.shape())):\n",
+    "        col=[]\n",
+    "        for i in range(len(T)):\n",
+    "            try:\n",
+    "                col.append(T[i][j])\n",
+    "            except:\n",
+    "                IndexError\n",
+    "        cols.append(col)\n",
+    "    return cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
    "id": "611d03f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO: compute the column stabilizer of a tableau T\n",
     "def col_stab(T):\n",
-    "    return None"
+    "    n=sum(T.shape())\n",
+    "    col_1 = cols(T)\n",
+    "    col_stabilizer = []\n",
+    "    for g in SymmetricGroup(n):\n",
+    "        col_2 = cols(act(g,T))\n",
+    "        assert len(col_1) == len(col_2)\n",
+    "        cols_preserved = True\n",
+    "        for i in range(len(col_1)):\n",
+    "            if set(col_1[i]) != set(col_2[i]):\n",
+    "                cols_preserved = False\n",
+    "        if cols_preserved:\n",
+    "            col_stabilizer.append(g)\n",
+    "    return col_stabilizer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "a030df6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [4, 5]]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "d88d348d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 5, 3], [1, 2]]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g=Permutation([4,5,3,1,2])\n",
+    "act(g,T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "9b697b6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(), (1,4)(2,5), (1,4), (2,5)]"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_stab(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41c788ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
