--- a/modular_repn_theory_symmetric_group.ipynb
+++ b/modular_repn_theory_symmetric_group.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "451484b7",
+   "id": "8e7c330b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "c7763dbd",
+   "id": "1215bf9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,33 +316,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "d82f51d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 3, 4], [5, 2]]"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#act on a tableau by an element of the symmetric group\n",
-    "e = SGA.an_element()\n",
-    "g=list(e)[0][0]; g\n",
-    "T = Tableau([[1,2,3],[4,5]]); T\n",
-    "act(g,T)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 179,
-   "id": "1ba292ed",
+   "id": "d58fc2ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "f6e2d928",
+   "id": "acdfe1ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "25285c1e",
+   "id": "81efa1f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "c794ea51",
+   "id": "39d9dc69",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "ef1180c7",
+   "id": "0fdd9b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "987407c2",
+   "id": "8255059c",
    "metadata": {},
    "outputs": [
     {
@@ -514,8 +489,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 196,
+   "id": "5b0ebc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: use the bilinear form to compute the rank of the Gram matrix (<e_i,e_j>)_{i,j=1,...,n}\n",
+    "#note that polytabloids e_T form a basis for S^\\lambda for *standard* tableau T\n",
+    "T = Tableau([[1,2,3],[4,5]])\n",
+    "def gram_matrix(T):\n",
+    "    std_tableaux=[act(g,T) for g in SymmetricGroup(sum(T.shape())) if act(g,T).is_standard()]\n",
+    "    gram_matrix=[[bilinear_form(polytabloid(T_1),polytabloid(T_2)) for T_1 in std_tableaux] for T_2 in std_tableaux]\n",
+    "    return gram_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "9d08d802",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 2, 1, 1, -1],\n",
+       " [2, 4, 2, 2, 1],\n",
+       " [1, 2, 4, 1, 2],\n",
+       " [1, 2, 1, 4, 2],\n",
+       " [-1, 1, 2, 2, 4]]"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gram_matrix(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1e3b1a5e",
+   "id": "1963fb61",
    "metadata": {},
    "outputs": [],
    "source": []
