computes the rank of the Gram matrix

--- a/modular_repn_theory_symmetric_group.ipynb
+++ b/modular_repn_theory_symmetric_group.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e7c330b",
+   "id": "18eab2b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "1215bf9d",
+   "id": "ed43beab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "d58fc2ae",
+   "id": "320154b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "acdfe1ab",
+   "id": "f20d50fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "81efa1f2",
+   "id": "24cc4b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "39d9dc69",
+   "id": "bb3ed8c4",
    "metadata": {},
    "outputs": [
     {
@@ -448,12 +448,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "id": "0fdd9b25",
+   "execution_count": 223,
+   "id": "58f97506",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: compute bilinear form <.,.> associated to span of tabloids\n",
+    "#compute bilinear form <.,.> associated to span of tabloids\n",
     "#<{s},{t}> = \\delta_{{s},{t}}\n",
     "#takes in two dicts representing polytabloids e_{T_1} and e_{T_2}\n",
     "#iterates through both keys only increasing the sum by the product of entries when {s}=={t}, i.e. s ~ t\n",
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "8255059c",
+   "id": "d88d43c3",
    "metadata": {},
    "outputs": [
     {
@@ -489,12 +489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "5b0ebc4d",
+   "execution_count": 222,
+   "id": "5b772eb9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: use the bilinear form to compute the rank of the Gram matrix (<e_i,e_j>)_{i,j=1,...,n}\n",
+    "#use the bilinear form to compute the rank of the Gram matrix (<e_i,e_j>)_{i,j=1,...,n}\n",
     "#note that polytabloids e_T form a basis for S^\\lambda for *standard* tableau T\n",
     "T = Tableau([[1,2,3],[4,5]])\n",
     "def gram_matrix(T):\n",
@@ -505,8 +505,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "9d08d802",
+   "execution_count": 213,
+   "id": "29ec1020",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "A=gram_matrix(T)\n",
+    "np.linalg.matrix_rank(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "d03fcd25",
    "metadata": {},
    "outputs": [
     {
@@ -519,19 +542,65 @@
        " [-1, 1, 2, 2, 4]]"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gram_matrix(T)"
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "9333fdd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 1, 1, 2],\n",
+       "       [2, 1, 2, 2, 1],\n",
+       "       [1, 2, 1, 1, 2],\n",
+       "       [1, 2, 1, 1, 2],\n",
+       "       [2, 1, 2, 2, 1]])"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mod(A,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "6d728dad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.matrix_rank(np.mod(A,3),3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1963fb61",
+   "id": "d271bf24",
    "metadata": {},
    "outputs": [],
    "source": []
